prod/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: modern
spec:
  selector:
    app: modern
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
