prod/gateway-routes.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: modern-gateway
spec:
  hosts:
    - "modern.elitebook.tokyo.lab"
  gateways:
    - modern-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: modern
